// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Embedded languages > Misc > should format multiple embedded languages in one file 1`] = `
"// Multiple embedded languages in one file
const mixedStyles = css\`
  .button {
    color: red;
  }
\`;

const mixedStyled = styled.button\`
  padding: 10px;
\`;

const mixedQuery = gql\`
  query {
    users {
      name
    }
  }
\`;

const mixedTemplate = html\`<div><h1>Title</h1></div>\`;

const mixedDocs = md\`
#Documentation
This is **important**.
\`;

// Multi-line with blank lines - should preserve blank lines without trailing whitespace
const multilineCSS = css\`
  .foo {
    color: red;
  }

  .bar {
    color: blue;
  }
\`;

const multilineGQL = gql\`
  type Foo {
    name: String!
  }

  type Bar {
    value: Int!
  }
\`;

// Empty - Regular template literals retain newlines and spaces, but embedded ones are condensed
const empty = css\`\`;
const empty2 = styled\`\`;
const empty3 = styled.div\`\`;
const empty4 = gql\`\`;
const empty5 = html\`\`;
const empty6 = md\`\`;
"
`;

exports[`Embedded languages > Misc > should not format regular templates, prettier-ignore, unsupported tags, and invalid syntax 1`] = `
"// Regular JavaScript - No embedded languages (should not be affected)
function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// prettier-ignore - Should not format
// prettier-ignore
const unformattedCss = css\`.button{color:red;background:blue;}\`;

const formattedCss = css\`
  .container {
    display: flex;
    align-items: center;
  }
\`;

// prettier-ignore
const unformattedGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const formattedGql = gql\`
  query GetPosts {
    posts {
      title
      author
    }
  }
\`;

// Unsupported tags - Should not format
const unknown = customTag\`This won't be formatted\`;

const sqlQuery = sql\`SELECT * FROM users WHERE id = 1\`;

// Invalid syntax in supported tag - Should not format
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--color),
    transparent 3px
  );
\`;
"
`;

exports[`Embedded languages > should format angular.ts (auto) 1`] = `
"// Angular @Component decorator - direct template and styles
// Uses Angular-specific syntax: interpolation, directives, bindings
@Component({
  selector: "app-root",
  template: \`
    <h1>{{ title }}</h1>
    <div *ngIf="isVisible" [class.active]="isActive" (click)="onClick()">
      <span>{{ count }}</span>
    </div>
    <ul>
      <li *ngFor="let item of items">{{ item.name }}</li>
    </ul>
  \`,
  styles: \`
    h1 {
      color: blue;
    }
  \`,
})
export class AppComponent1 {}

// Array form styles
@Component({
  selector: "app-test",
  template: \`<ul>
    <li>test</li>
  </ul> \`,
  styles: [
    \`
      :host {
        color: red;
      }
      div {
        background: blue;
      }
    \`,
  ],
})
class TestComponent {}

// Computed properties - should NOT be formatted
const styles = "foobar";
const template = "foobar";

@Component({
  selector: "app-computed",
  [template]: \`<h1>{{       hello }}</h1>\`,
  [styles]: \`h1 { color: blue }\`,
})
export class AppComponent2 {}
"
`;

exports[`Embedded languages > should format angular.ts with CRLF 1`] = `
"// Angular @Component decorator - direct template and styles
// Uses Angular-specific syntax: interpolation, directives, bindings
@Component({
  selector: "app-root",
  template: \`
    <h1>{{ title }}</h1>
    <div *ngIf="isVisible" [class.active]="isActive" (click)="onClick()">
      <span>{{ count }}</span>
    </div>
    <ul>
      <li *ngFor="let item of items">{{ item.name }}</li>
    </ul>
  \`,
  styles: \`
    h1 {
      color: blue;
    }
  \`,
})
export class AppComponent1 {}

// Array form styles
@Component({
  selector: "app-test",
  template: \`<ul>
    <li>test</li>
  </ul> \`,
  styles: [
    \`
      :host {
        color: red;
      }
      div {
        background: blue;
      }
    \`,
  ],
})
class TestComponent {}

// Computed properties - should NOT be formatted
const styles = "foobar";
const template = "foobar";

@Component({
  selector: "app-computed",
  [template]: \`<h1>{{       hello }}</h1>\`,
  [styles]: \`h1 { color: blue }\`,
})
export class AppComponent2 {}
"
`;

exports[`Embedded languages > should format css.js (auto) 1`] = `
"// Tagged template literals with css and styled tags
const styles = css\`
  .button {
    color: red;
    background: blue;
    padding: 10px 20px;
  }
\`;

const styledComponent = styled\`
  background-color: #ffffff;
  border-radius: 4px;
\`;

// Member expression tags
const cssGlobal = css.global\`
  .reset {
    margin: 0;
    padding: 0;
  }
\`;

const styledDiv = styled.div\`
  width: 100%;
  height: 100vh;
\`;

const styledLink = styled["a"]\`
  text-decoration: none;
  color: #007bff;
\`;

const styledButton = styled(Button)\`
  font-size: 16px;
  color: #333;
\`;

// CSS prop and styled-jsx
const cssProp = (
  <div
    css={\`
      display: flex;
      align-items: center;
    \`}
  >
    Hello
  </div>
);

const styledJsx = (
  <style jsx>{\`
    display: flex;
    align-items: center;
  \`}</style>
);

// Template literals with \${} substitutions
const dynamic = css\`
  color: \${color};
  background: \${bg};
\`;

const styledWithExpr = styled.button\`
  font-size: \${size}px;
  color: \${theme.primary};
\`;

// printWidth-aware: long transition values should break across lines
const animated = styled.div\`
  transition:
    width \${duration},
    height \${duration},
    top \${duration},
    left \${duration};
\`;

const multiProp = css\`
  .card {
    padding: \${spacing}px;
    margin: \${margin};
    border: 1px solid \${borderColor};
    box-shadow: 0 2px 4px \${shadowColor};
  }
\`;

// Multi-line templates with inherited indentation (dedent before formatting)
const documented = styled.div\`
  /**
   * @description This is a documented section
   * @param {number} value - Some value
   */
  padding: 16px;
\`;
"
`;

exports[`Embedded languages > should format css.js with CRLF 1`] = `
"// Tagged template literals with css and styled tags
const styles = css\`
  .button {
    color: red;
    background: blue;
    padding: 10px 20px;
  }
\`;

const styledComponent = styled\`
  background-color: #ffffff;
  border-radius: 4px;
\`;

// Member expression tags
const cssGlobal = css.global\`
  .reset {
    margin: 0;
    padding: 0;
  }
\`;

const styledDiv = styled.div\`
  width: 100%;
  height: 100vh;
\`;

const styledLink = styled["a"]\`
  text-decoration: none;
  color: #007bff;
\`;

const styledButton = styled(Button)\`
  font-size: 16px;
  color: #333;
\`;

// CSS prop and styled-jsx
const cssProp = (
  <div
    css={\`
      display: flex;
      align-items: center;
    \`}
  >
    Hello
  </div>
);

const styledJsx = (
  <style jsx>{\`
    display: flex;
    align-items: center;
  \`}</style>
);

// Template literals with \${} substitutions
const dynamic = css\`
  color: \${color};
  background: \${bg};
\`;

const styledWithExpr = styled.button\`
  font-size: \${size}px;
  color: \${theme.primary};
\`;

// printWidth-aware: long transition values should break across lines
const animated = styled.div\`
  transition:
    width \${duration},
    height \${duration},
    top \${duration},
    left \${duration};
\`;

const multiProp = css\`
  .card {
    padding: \${spacing}px;
    margin: \${margin};
    border: 1px solid \${borderColor};
    box-shadow: 0 2px 4px \${shadowColor};
  }
\`;

// Multi-line templates with inherited indentation (dedent before formatting)
const documented = styled.div\`
  /**
   * @description This is a documented section
   * @param {number} value - Some value
   */
  padding: 16px;
\`;
"
`;

exports[`Embedded languages > should format graphql.js (auto) 1`] = `
"// Tagged template literals with gql and graphql tags
const query = gql\`
  query GetUser($id: ID!) {
    user(id: $id) {
      name
      email
    }
  }
\`;

const mutation = graphql\`
  mutation CreatePost($input: PostInput!) {
    createPost(input: $input) {
      id
      title
    }
  }
\`;

// graphql() function call - single argument (hugging layout)
const schema =
  graphql(\`
    query {
      users {
        name
        email
      }
    }
  \`);

// graphql() function call - multiple arguments
graphql(
  schema,
  \`
    mutation MarkReadNotificationMutation($input: MarkReadNotificationData!) {
      markReadNotification(data: $input) {
        notification {
          seenState
        }
      }
    }
  \`,
);

// graphql() function call - empty
graphql(\`\`);

// Non-target: gql() is NOT recognized as a function call pattern
gql(\`query{users{name}}\`);

// Non-target: other function names
someFunction(\`query{users{name}}\`);
"
`;

exports[`Embedded languages > should format graphql.js with CRLF 1`] = `
"// Tagged template literals with gql and graphql tags
const query = gql\`
  query GetUser($id: ID!) {
    user(id: $id) {
      name
      email
    }
  }
\`;

const mutation = graphql\`
  mutation CreatePost($input: PostInput!) {
    createPost(input: $input) {
      id
      title
    }
  }
\`;

// graphql() function call - single argument (hugging layout)
const schema =
  graphql(\`
    query {
      users {
        name
        email
      }
    }
  \`);

// graphql() function call - multiple arguments
graphql(
  schema,
  \`
    mutation MarkReadNotificationMutation($input: MarkReadNotificationData!) {
      markReadNotification(data: $input) {
        notification {
          seenState
        }
      }
    }
  \`,
);

// graphql() function call - empty
graphql(\`\`);

// Non-target: gql() is NOT recognized as a function call pattern
gql(\`query{users{name}}\`);

// Non-target: other function names
someFunction(\`query{users{name}}\`);
"
`;

exports[`Embedded languages > should format html.js (auto) 1`] = `
"// Tagged template literals with html tag
const template = html\`<div class="container">
  <h1>Hello</h1>
  <p>World</p>
</div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click</button>\`;
"
`;

exports[`Embedded languages > should format html.js with CRLF 1`] = `
"// Tagged template literals with html tag
const template = html\`<div class="container">
  <h1>Hello</h1>
  <p>World</p>
</div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click</button>\`;
"
`;

exports[`Embedded languages > should format markdown.js (auto) 1`] = `
"// Tagged template literals with md and markdown tags
const documentation = md\`
#Heading
This is **bold**.
-Item 1
-Item 2
\`;

const readme = markdown\`
##Installation

~~~bash
npm install package
~~~
\`;
"
`;

exports[`Embedded languages > should format markdown.js with CRLF 1`] = `
"// Tagged template literals with md and markdown tags
const documentation = md\`
#Heading
This is **bold**.
-Item 1
-Item 2
\`;

const readme = markdown\`
##Installation

~~~bash
npm install package
~~~
\`;
"
`;

exports[`Embedded languages > should not format angular.ts (off) 1`] = `
"// Angular @Component decorator - direct template and styles
// Uses Angular-specific syntax: interpolation, directives, bindings
@Component({
  selector: "app-root",
  template: \`
        <h1>{{    title    }}</h1>
        <div *ngIf="isVisible"    [class.active]="isActive"     (click)="onClick()">
            <span>{{ count     }}</span>
        </div>
        <ul><li *ngFor="let item of items">{{item.name}}</li></ul>
    \`,
  styles: \`h1 { color: blue }\`,
})
export class AppComponent1 {}

// Array form styles
@Component({
  selector: "app-test",
  template: \`<ul>   <li>test</li>
  </ul>
  \`,
  styles: [
    \`

 :host {
   color: red;
 }
 div { background: blue
 }
\`,
  ],
})
class TestComponent {}

// Computed properties - should NOT be formatted
const styles = "foobar";
const template = "foobar";

@Component({
  selector: "app-computed",
  [template]: \`<h1>{{       hello }}</h1>\`,
  [styles]: \`h1 { color: blue }\`,
})
export class AppComponent2 {}
"
`;

exports[`Embedded languages > should not format css.js (off) 1`] = `
"// Tagged template literals with css and styled tags
const styles = css\`.button{color:red;background:blue;padding:10px 20px;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;\`;

// Member expression tags
const cssGlobal = css.global\`.reset{margin:0;padding:0;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;\`;

// CSS prop and styled-jsx
const cssProp = <div css={\`display: flex; align-items: center;\`}>Hello</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center;\`}</style>;

// Template literals with \${} substitutions
const dynamic = css\`color:\${color};background:\${bg};\`;

const styledWithExpr = styled.button\`font-size:\${size}px;color:\${theme.primary};\`;

// printWidth-aware: long transition values should break across lines
const animated = styled.div\`transition:width \${duration},height \${duration},top \${duration},left \${duration};\`;

const multiProp = css\`
  .card {padding:\${spacing}px;margin:\${margin};border:1px solid \${borderColor};box-shadow:0 2px 4px \${shadowColor};}
\`;

// Multi-line templates with inherited indentation (dedent before formatting)
const documented = styled.div\`
  /**
   * @description This is a documented section
   * @param {number} value - Some value
   */
  padding: 16px;
\`;
"
`;

exports[`Embedded languages > should not format graphql.js (off) 1`] = `
"// Tagged template literals with gql and graphql tags
const query = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

// graphql() function call - single argument (hugging layout)
const schema = graphql(\`query{users{name email}}\`);

// graphql() function call - multiple arguments
graphql(
  schema,
  \`mutation MarkReadNotificationMutation($input:MarkReadNotificationData!){markReadNotification(data:$input){notification{seenState}}}\`,
);

// graphql() function call - empty
graphql(\`\`);

// Non-target: gql() is NOT recognized as a function call pattern
gql(\`query{users{name}}\`);

// Non-target: other function names
someFunction(\`query{users{name}}\`);
"
`;

exports[`Embedded languages > should not format html.js (off) 1`] = `
"// Tagged template literals with html tag
const template = html\`<div class="container"><h1>Hello</h1><p>World</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click</button>\`;
"
`;

exports[`Embedded languages > should not format markdown.js (off) 1`] = `
"// Tagged template literals with md and markdown tags
const documentation = md\`#Heading
This is **bold**.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;
"
`;
